--- a/src/app/aircondetails/aircondetails.component.css
+++ b/src/app/aircondetails/aircondetails.component.css
@@ -1,54 +1,126 @@
 .sidenav-container {
-    height: 100%;
-  }
-  .sidenav{
-    width: fit-content;
-    width: 280px;
-    background-color: #EAE2B7;
-  }
-  .mat-sidenav-content{
-     height: 910px;
-     background-color: white;
-  }
-  .mat-toolbar{
-    background-color: #D62828;
+  height: 100%;
+}
+.sidenav{
+  width: fit-content;
+  width: 280px;
+  background-color: #EAE2B7;
+}
+.mat-sidenav-content{
+   height: 910px;
+   background-color: white;
+}
+.mat-toolbar{
+  background-color: #D62828;
+  width: 100%;
+}
+.logo{
+  width: 200px;
+  height: 180px;
+  padding-top: 40px;
+  margin-left: 40px;
+}
+.nav-icon{
+  color: #003049;
+  font-size: 35px;
+  margin-left: 25px;
+  margin-top: -12px;
+}
+.dashboardside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.dashboardside:hover
+{
+    background-color: #c8c19c;
+    
     width: 100%;
-  }
-  .logo{
-    width: 200px;
-    height: 180px;
-    padding-top: 40px;
-    margin-left: 40px;
-  }
-  .nav-icon{
-    color: #003049;
-    font-size: 35px;
-    margin-left: 25px;
-  }
-  .nav-btn{
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
-    margin-left: 25px;
-  }
-  .dashboardside{
-    margin-left: 0px;
-    margin-top: 30px;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
     text-align: justify;
-  }
-  .dashboardside:hover
-  {
-      background-color: #c8c19c;
-      align-self: auto;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
+}
+
+.dashboard-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+  text-decoration: none;
+}
+
+.bookingside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.bookingside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.booking-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.profileside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.profileside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.profile-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.spacer{
+  flex: 1 1 auto;
+}
+.inboxicon
+{
+  font-size: 30px;
+  color: #14213D;
+  margin-right: 20px;
+}
+.logoutBtn
+{
+  font-size: 20px;
+  color: antiquewhite;
+}
+.logoutBtn:hover{
+  background-color: black;
+}
   .stepper
   {
-    margin-top: 50px;
+    margin-top: 100px;
+    margin-left: 180px;
     font-family: 'Trebuchet MS';
     width: fit-content;
   }
@@ -74,11 +146,12 @@
     margin-top: 25px;
     float: left;
   }
-  .unitdetailscard{
+  .unitdetailscard
+  {
     margin: auto;
     margin-top: 40px;
     width: 800px;
-    height: fit-content;
+    height: 350px;
   }
   .locationcard
   {
@@ -327,7 +400,7 @@
   {
     margin-top: 10px;
     color: #14213D;
-    font-size: 35px;
+    font-size: 30px;
   }
   
   .detailssummary
@@ -335,7 +408,7 @@
     color: #14213D;
     margin-top: -33px;
     margin-left: 50px;
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'Trebuchet MS';
   }
   
