--- a/src/app/appliances/appliances.component.css
+++ b/src/app/appliances/appliances.component.css
@@ -1,92 +1,215 @@
 .sidenav-container {
-    height: 100%;
-  }
-  .sidenav{
-    width: fit-content;
-    width: 280px;
-    background-color: #EAE2B7;
-  }
-  .mat-sidenav-content{
-     height: 910px;
-     background-color: white;
-  }
-  .mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-  }
-  .logo{
-    width: 200px;
-    height: 180px;
-    padding-top: 40px;
-    margin-left: 40px;
-  }
-  .nav-icon{
-    color: #003049;
-    font-size: 35px;
-    margin-left: 25px;
-  }
-  .nav-btn{
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
-    margin-left: 25px;
-  }
-  .dashboardside{
-    margin-left: 0px;
-    margin-top: 30px;
-    text-align: justify;
-  }
-  .dashboardside:hover
-  {
-      background-color: #c8c19c;
-      align-self: auto;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  .allservices{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .spacer{
-    flex: 1 1 auto;
-  }
-  .inboxicon
-  {
-    font-size: 30px;
-    color: #14213D;
-    margin-right: 20px;
-  }
-  .logoutBtn
-  {
-    font-size: 20px;
-    color: antiquewhite;
-  }
-  .logoutBtn:hover{
-    background-color: black;
-  }
-.h1title
-{
-    font-size: 25px;
-    font-family: 'Trebuchet MS';
-    margin-left: 25px;
+  height: 100%;
 }
-.h1button{
-    font-family: 'Trebuchet MS';
-    font-size: 18px;
-    justify-content: center;
-    display: flex;
-    margin: auto;
+.sidenav{
+  width: fit-content;
+  width: 280px;
+  background-color: #EAE2B7;
 }
-.appliancecard
-{
-    margin: 20px;
-    margin-top: 20px;
-    width: 150px;
-    height: fit-content;
+.mat-sidenav-content{
+   height: 910px;
+   background-color: white;
+}
+.mat-toolbar{
+  background-color: #D62828;
+  width: 100%;
+}
+.logo{
+  width: 200px;
+  height: 180px;
+  padding-top: 40px;
+  margin-left: 40px;
+}
+.nav-icon{
+  color: #003049;
+  font-size: 35px;
+  margin-left: 25px;
+  margin-top: -12px;
+}
+.dashboardside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
 }
 
+.dashboardside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.dashboard-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+  text-decoration: none;
+}
+
+.bookingside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.bookingside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.booking-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.profileside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.profileside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.profile-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.spacer{
+  flex: 1 1 auto;
+}
+.inboxicon
+{
+  font-size: 30px;
+  color: #14213D;
+  margin-right: 20px;
+}
+.logoutBtn
+{
+  font-size: 20px;
+  color: antiquewhite;
+}
+.logoutBtn:hover{
+  background-color: black;
+}
+
+.h1title
+{
+  font-family: 'Trebuchet MS';
+  font-size: 25px;
+  color: #14213D;
+  margin-top: 200px;
+  margin-left: 15px;
+  text-align: center;
+}
+
+.airconcard
+{
+  margin-top: 40px;
+  margin-left: 350px;
+  height: 150px;
+  width: 150px;
+    
+}
+
+.aircontxt{
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  margin-left: 48px;
+  margin-top: -10px;
+  
+}
+
+.refcard
+{
+  margin-top: -182px;
+  margin-left: 550px;
+  height: 150px;
+  width: 150px;
+    
+}
+
+.reftxt{
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  margin-left: 25px;
+  margin-top: -10px;
+  
+}
+
+.fancard
+{
+  margin-top: -182px;
+  margin-left: 750px;
+  height: 150px;
+  width: 150px;
+    
+}
+
+.fantxt{
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  margin-left: 24px;
+  margin-top: -10px;
+  
+}
+
+.washingcard
+{
+  margin-top: -182px;
+  margin-left: 950px;
+  height: 150px;
+  width: 150px;
+    
+}
+
+.washingtxt{
+  font-family: 'Trebuchet MS';
+  font-size: 17px;
+  margin-left: 8px;
+  margin-top: -10px;
+  
+}
+
+.tvcard
+{
+  margin-top: -182px;
+  margin-left: 1150px;
+  height: 150px;
+  width: 150px;
+    
+}
+
+.tvtxt{
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  margin-left: 30px;
+  margin-top: -10px;
+  
+}
 
