--- a/src/app/bookingform/bookingform.component.css
+++ b/src/app/bookingform/bookingform.component.css
@@ -24,27 +24,80 @@
   color: #003049;
   font-size: 35px;
   margin-left: 25px;
-}
-.nav-btn{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 25px;
-  margin-left: 25px;
+  margin-top: -12px;
 }
 .dashboardside{
   margin-left: 0px;
   margin-top: 30px;
   text-align: justify;
 }
+
 .dashboardside:hover
 {
     background-color: #c8c19c;
-    align-self: auto;
+    
     width: 100%;
     height: 70px;
     margin-left: 0;
     margin-top: 20px;
     text-align: justify;
+}
+
+.dashboard-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+  text-decoration: none;
+}
+
+.bookingside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.bookingside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.booking-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.profileside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.profileside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.profile-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
 }
 
 .spacer{
@@ -84,14 +137,17 @@
 }
 .appliancescard
 {
-    width: 250px;
-    height: 250px;
+    margin-top: 80px;
+    margin-left: 450px;
+    width: 200px;
+    height: 200px;
+   
     margin: 10px;
 }
 .h1appliances
 {
   font-family: 'Trebuchet MS';
-  font-size: 20px;
+  font-size: 17px;
   justify-content: center;
   display: flex;
   margin: auto;
@@ -105,47 +161,55 @@
 
 .cleaningcard
 {
-    width: 250px;
-    height: 250px;
+    margin-top: -233px;
+    margin-left: 700px;
+    width: 200px;
+    height: 200px;
+  
     margin: 10px;
 }
 .h1cleaning
-{
-    font-family: 'Trebuchet MS';
-    font-size: 20px;
-    justify-content: center;
-    display: flex;
-    margin: auto;
-}
-.installcard
-{
-    width: 250px;
-    height: 250px;
-    margin: 10px;
-}
-.h1install
 {
     font-family: 'Trebuchet MS';
     font-size: 17px;
     justify-content: center;
     display: flex;
     margin: auto;
-    margin-left: -24px;
+}
+.installcard
+{
+    margin-top: -233px;
+    margin-left: 950px;
+    width: 200px;
+    height: 200px;
+ 
+    margin: 10px;
+}
+.h1install
+{
+    font-family: 'Trebuchet MS';
+    font-size: 14px;
+    justify-content: center;
+    display: flex;
+    margin: auto;
+    margin-left: -8px;
+   
 }
 .h1serviceneed
 {
     font-family: 'Trebuchet MS';
     font-size: 25px;
     color: #14213D;
-    margin-top: 70px;
+    margin-top: 150px;
+    margin-left: 15px;
     text-align: center;
 }
 
 .h1bookservice
 {
     font-family: 'Trebuchet MS';
-    font-size: 28px;
+    font-size: 23px;
     color: #14213D;
-    margin-top: 50px;
-    margin-left: 50px;
+    margin-top: 60px;
+    margin-left: 80px;
 }
