--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,50 +1,153 @@
+
 .sidenav-container {
   height: 100%;
 }
+
 .sidenav{
   width: fit-content;
   width: 280px;
   background-color: #EAE2B7;
 }
+
 .mat-sidenav-content{
    height: 910px;
    background-color: white;
 }
+
 .mat-toolbar{
   background-color: #D62828;
   width: 100%;
 }
+
 .logo{
-  width: 200px;
-  height: 180px;
+  width: 180px;
+  height: 150px;
   padding-top: 40px;
-  margin-left: 40px;
+  margin-left: 55px;
 }
+
+.dashtitle
+{
+  color: #003049;
+  font-size: 25px;
+  margin-left: 80px;
+  margin-top: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+
+.dashvector
+{
+  width: 360px;
+  height: 250px;
+  margin-left: 620px;
+  margin-top: -60px;
+}
+
 .nav-icon{
   color: #003049;
   font-size: 35px;
   margin-left: 25px;
+  margin-top: -12px;
 }
-.nav-btn{
-  color: #003049;
+
+.datetime
+{
+  margin-top: -5px;
+  margin-left: 1000px;
+  color: #FFFFFF;
+  font-size: 20px;
+  
+}
+
+.date
+{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 25px;
-  margin-left: 25px;
+  font-size: 15px;
 }
+
+
+.time
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+
+}
+
+
 .dashboardside{
   margin-left: 0px;
   margin-top: 30px;
   text-align: justify;
 }
+
 .dashboardside:hover
 {
     background-color: #c8c19c;
-    align-self: auto;
+    
     width: 100%;
     height: 70px;
     margin-left: 0;
     margin-top: 20px;
     text-align: justify;
+}
+
+.dashboard-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+  text-decoration: none;
+}
+
+.bookingside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.bookingside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.booking-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
+}
+
+.profileside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
+}
+
+.profileside:hover
+{
+    background-color: #c8c19c;
+    
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.profile-btn
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 25px;
 }
 
 .spacer{
@@ -56,11 +159,21 @@
   margin-left: 50px;
   width: fit-content;
 }
+.ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 30px;
+  margin-left: 10px;
+  color: #FFFFFF;
+}
+
 .welcome
 {
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 20px;
-color: antiquewhite;
+font-size: 18px;
+margin-left: 80px;
+margin-top: -15px;
+color: #003049;
 }
 
 .inboxicon
