cleaning and install

--- a/src/app/appliances/appliances.component.html
+++ b/src/app/appliances/appliances.component.html
@@ -49,46 +49,44 @@
     <h1 class="h1title">Appliance to Repair</h1>
 
     <div class="allservices">
+      <mat-card class="airconcard">
+        <mat-card-content>
+          <img class="airconimg" mat-button (click)="AirconOpen()" mat-card-image src="../../assets/airconicon.png">
+          <h1 class="aircontxt" mat-button (click)="AirconOpen()">Aircon</h1>
+        </mat-card-content>
+      </mat-card>
 
+      <mat-card class="refcard">
+        <mat-card-content>
+          <img class="refimg" mat-button (click)="RefrigeratorOpen()" mat-card-image src="../../assets/reficon.png">
+          <h1 class="reftxt" mat-button (click)="RefrigeratorOpen()">Refrigerator</h1>
+        </mat-card-content>
+      </mat-card>
 
-  <mat-card class="airconcard">
-    <mat-card-content>
-    <img class="airconimg" mat-button  (click)="AirconOpen()" mat-card-image src="../../assets/airconicon.png">
-      <h1 class="aircontxt" mat-button (click)="AirconOpen()">Aircon</h1>
-    </mat-card-content>
-  </mat-card>
+      <mat-card class="fancard">
+        <mat-card-content>
+          <img class="fanimg" mat-button (click)="ElectricfanOpen()" mat-card-image src="../../assets/efanicon.png"
+            mat-dialog-close>
+          <h1 class="fantxt" mat-button (click)="ElectricfanOpen()" mat-dialog-close>Electric Fan</h1>
+        </mat-card-content>
+      </mat-card>
 
+      <mat-card class="washingcard">
+        <mat-card-content>
+          <img class="washingimg" mat-button (click)="WashingmachineOpen()" mat-card-image
+            src="../../assets/washingicon.png" mat-dialog-close>
+          <h1 class="washingtxt" mat-button (click)="WashingmachineOpen()" mat-dialog-close>Washing
+            Machine</h1>
+        </mat-card-content>
+      </mat-card>
 
-  <mat-card class="refcard">
-    <mat-card-content>
-    <img class="refimg" mat-button  (click)="RefrigeratorOpen()" mat-card-image src="../../assets/reficon.png">
-      <h1 class="reftxt" mat-button (click)="RefrigeratorOpen()">Refrigerator</h1>
-    </mat-card-content>
-  </mat-card>
- 
-  <mat-card class="fancard">
-    <mat-card-content>
-    <img class="fanimg" mat-button (click)="ElectricfanOpen()" mat-card-image src="../../assets/efanicon.png"
-      mat-dialog-close>
-      <h1 class="fantxt" mat-button (click)="ElectricfanOpen()" mat-dialog-close>Electric Fan</h1>
-    </mat-card-content>
-  </mat-card>
-
-  <mat-card class="washingcard">
-    <mat-card-content>
-    <img class="washingimg" mat-button (click)="WashingmachineOpen()" mat-card-image
-      src="../../assets/washingicon.png" mat-dialog-close>
-      <h1 class="washingtxt" mat-button (click)="WashingmachineOpen()" mat-dialog-close>Washing
-        Machine</h1>
-    </mat-card-content>
-  </mat-card>
-
-  <mat-card class="tvcard">
-    <mat-card-content>
-    <img class="tvimg" mat-button (click)="TelevisionOpen()" mat-card-image src="../../assets/tvicon.png"
-      mat-dialog-close>
-      <h1 class="tvtxt" mat-button (click)="TelevisionOpen()" mat-dialog-close>Television</h1>
-    </mat-card-content>
-
-
-
+      <mat-card class="tvcard">
+        <mat-card-content>
+          <img class="tvimg" mat-button (click)="TelevisionOpen()" mat-card-image src="../../assets/tvicon.png"
+            mat-dialog-close>
+          <h1 class="tvtxt" mat-button (click)="TelevisionOpen()" mat-dialog-close>Television</h1>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
