--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -52,30 +52,6 @@
   margin-top: -12px;
 }
 
-.datetime
-{
-  margin-top: -5px;
-  margin-left: 1000px;
-  color: #FFFFFF;
-  font-size: 20px;
-  
-}
-
-.date
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-}
-
-
-.time
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-
-}
-
-
 .dashboardside{
   margin-left: 0px;
   margin-top: 30px;
@@ -110,7 +86,6 @@
 .bookingside:hover
 {
     background-color: #c8c19c;
-    
     width: 100%;
     height: 70px;
     margin-left: 0;
@@ -152,6 +127,13 @@
 
 .spacer{
   flex: 1 1 auto;
+}
+.datetime
+{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #FFFFFF;
+  font-size: 20px;
+  margin: 10px;
 }
 
 .tab{
