--- a/src/app/aircondetails/aircondetails.component.css
+++ b/src/app/aircondetails/aircondetails.component.css
@@ -119,8 +119,8 @@
 }
   .stepper
   {
+    margin: auto;
     margin-top: 100px;
-    margin-left: 180px;
     font-family: 'Trebuchet MS';
     width: fit-content;
   }
