--- a/src/app/aircondetails/aircondetails.component.html
+++ b/src/app/aircondetails/aircondetails.component.html
@@ -54,12 +54,12 @@
 
               <mat-form-field class="airconselect" appearance="outline">
                 <mat-label>Aircon Type</mat-label>
-                <mat-select formControlName="service_type">
+                <mat-select formControlName="service_aptype">
                   <mat-option *ngFor="let act of ac_type" [value]="act">
                     {{act}}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="unitdetailsForm.get('service_type').hasError('required')">
+                <mat-error *ngIf="unitdetailsForm.get('service_aptype').hasError('required')">
                   You must make a selection
                 </mat-error>
               </mat-form-field>
@@ -86,8 +86,7 @@
                 <mat-error *ngIf="unitdetailsForm.get('service_unitType').hasError('required')">
                   You must make a selection
                 </mat-error>
-              </mat-form-field>
-          
+              </mat-form-field>      
               <div>
                 <mat-form-field class="airconprob" appearance="outline">
                   <mat-label>Unit Problem</mat-label>
@@ -196,7 +195,7 @@
               <h4>Unit Problem: </h4> {{service_unitProb}}
             </div>
             <div class="column">
-              <h4>Type: </h4> {{service_type}}
+              <h4>Type: </h4> {{service_aptype}}
               <h4>Unit Type: </h4> {{service_unitType}}
             </div>
           </div>
@@ -272,7 +271,7 @@
                 <h4>Unit Problem: </h4> {{service_unitProb}}
               </div>
               <div class="column">
-                <h4>Type: </h4> {{service_type}}
+                <h4>Type: </h4> {{service_aptype}}
                 <h4>Unit Type: </h4> {{service_unitType}}
               </div>
               <hr>
@@ -395,7 +394,7 @@
                 <h4>Unit Problem: </h4> {{service_unitProb}}
               </div>
               <div class="column">
-                <h4>Type: </h4> {{service_type}}
+                <h4>Type: </h4> {{service_aptype}}
                 <h4>Unit Type: </h4> {{service_unitType}}
               </div>
               <hr>
@@ -433,7 +432,7 @@
 
               
               <div class="column">
-                <h4>Type: </h4> {{service_type}}
+                <h4>Type: </h4> {{service_aptype}}
                 <h4>Unit Type: </h4> {{service_unitType}}
               </div>
               <hr>
