--- a/src/app/appliances/appliances.component.css
+++ b/src/app/appliances/appliances.component.css
@@ -15,17 +15,38 @@
   width: 100%;
 }
 .logo{
-  width: 200px;
-  height: 180px;
+  width: 180px;
+  height: 150px;
   padding-top: 40px;
-  margin-left: 40px;
+  margin-left: 55px;
 }
+
+.dashtitle
+{
+  color: #003049;
+  font-size: 25px;
+  margin-left: 80px;
+  margin-top: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+
+.dashvector
+{
+  width: 360px;
+  height: 250px;
+  margin-left: 620px;
+  margin-top: -60px;
+}
+
 .nav-icon{
   color: #003049;
   font-size: 35px;
   margin-left: 25px;
   margin-top: -12px;
 }
+
 .dashboardside{
   margin-left: 0px;
   margin-top: 30px;
@@ -60,7 +81,6 @@
 .bookingside:hover
 {
     background-color: #c8c19c;
-    
     width: 100%;
     height: 70px;
     margin-left: 0;
@@ -84,7 +104,6 @@
 .profileside:hover
 {
     background-color: #c8c19c;
-    
     width: 100%;
     height: 70px;
     margin-left: 0;
@@ -123,93 +142,77 @@
   font-family: 'Trebuchet MS';
   font-size: 25px;
   color: #14213D;
-  margin-top: 200px;
-  margin-left: 15px;
+  margin-top: 150px;
   text-align: center;
 }
-
+.allservices{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .airconcard
 {
-  margin-top: 40px;
-  margin-left: 350px;
+  margin: 15px;
   height: 150px;
   width: 150px;
     
 }
-
 .aircontxt{
   font-family: 'Trebuchet MS';
   font-size: 18px;
-  margin-left: 48px;
+  text-align: center;
   margin-top: -10px;
-  
 }
-
 .refcard
 {
-  margin-top: -182px;
-  margin-left: 550px;
+  margin: 15px;
   height: 150px;
   width: 150px;
-    
 }
 
 .reftxt{
   font-family: 'Trebuchet MS';
   font-size: 18px;
-  margin-left: 25px;
+  text-align: center;
   margin-top: -10px;
-  
 }
 
 .fancard
 {
-  margin-top: -182px;
-  margin-left: 750px;
+  margin: 15px;
   height: 150px;
   width: 150px;
-    
 }
 
 .fantxt{
   font-family: 'Trebuchet MS';
   font-size: 18px;
-  margin-left: 24px;
+  text-align: center;
   margin-top: -10px;
   
 }
-
 .washingcard
 {
-  margin-top: -182px;
-  margin-left: 950px;
+  margin: 15px;
   height: 150px;
   width: 150px;
-    
 }
 
 .washingtxt{
   font-family: 'Trebuchet MS';
   font-size: 17px;
-  margin-left: 8px;
+  text-align: center;
   margin-top: -10px;
-  
 }
-
 .tvcard
 {
-  margin-top: -182px;
-  margin-left: 1150px;
+  margin: 15px;
   height: 150px;
   width: 150px;
-    
 }
-
 .tvtxt{
   font-family: 'Trebuchet MS';
   font-size: 18px;
-  margin-left: 30px;
+  text-align: center;
   margin-top: -10px;
-  
 }
-
