--- a/src/app/bookingform/bookingform.component.css
+++ b/src/app/bookingform/bookingform.component.css
@@ -15,17 +15,38 @@
   width: 100%;
 }
 .logo{
-  width: 200px;
-  height: 180px;
+  width: 180px;
+  height: 150px;
   padding-top: 40px;
-  margin-left: 40px;
+  margin-left: 55px;
 }
+
+.dashtitle
+{
+  color: #003049;
+  font-size: 25px;
+  margin-left: 80px;
+  margin-top: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+
+.dashvector
+{
+  width: 360px;
+  height: 250px;
+  margin-left: 620px;
+  margin-top: -60px;
+}
+
 .nav-icon{
   color: #003049;
   font-size: 35px;
   margin-left: 25px;
   margin-top: -12px;
 }
+
 .dashboardside{
   margin-left: 0px;
   margin-top: 30px;
@@ -60,7 +81,6 @@
 .bookingside:hover
 {
     background-color: #c8c19c;
-    
     width: 100%;
     height: 70px;
     margin-left: 0;
@@ -84,7 +104,6 @@
 .profileside:hover
 {
     background-color: #c8c19c;
-    
     width: 100%;
     height: 70px;
     margin-left: 0;
@@ -99,6 +118,7 @@
   font-size: 18px;
   margin-left: 25px;
 }
+
 
 .spacer{
   flex: 1 1 auto;
@@ -141,7 +161,6 @@
     margin-left: 450px;
     width: 200px;
     height: 200px;
-   
     margin: 10px;
 }
 .h1appliances
@@ -161,11 +180,8 @@
 
 .cleaningcard
 {
-    margin-top: -233px;
-    margin-left: 700px;
     width: 200px;
     height: 200px;
-  
     margin: 10px;
 }
 .h1cleaning
@@ -178,22 +194,18 @@
 }
 .installcard
 {
-    margin-top: -233px;
-    margin-left: 950px;
     width: 200px;
     height: 200px;
- 
     margin: 10px;
 }
 .h1install
 {
     font-family: 'Trebuchet MS';
-    font-size: 14px;
+    font-size: 17px;
     justify-content: center;
     display: flex;
     margin: auto;
     margin-left: -8px;
-   
 }
 .h1serviceneed
 {
@@ -201,15 +213,5 @@
     font-size: 25px;
     color: #14213D;
     margin-top: 150px;
-    margin-left: 15px;
     text-align: center;
-}
-
-.h1bookservice
-{
-    font-family: 'Trebuchet MS';
-    font-size: 23px;
-    color: #14213D;
-    margin-top: 60px;
-    margin-left: 80px;
 }
