--- a/src/app/refrigeratordetails/refrigeratordetails.component.html
+++ b/src/app/refrigeratordetails/refrigeratordetails.component.html
@@ -54,12 +54,12 @@
 
             <mat-form-field class="refrigeratorselect" appearance="outline">
               <mat-label>Refrigerator Type</mat-label>
-              <mat-select formControlName="service_type">
+              <mat-select formControlName="service_aptype">
                 <mat-option *ngFor="let rt of ref_type" [value]="rt">
                   {{rt}}
                 </mat-option>
               </mat-select>
-              <mat-error *ngIf="unitdetailsForm.get('service_type').hasError('required')">
+              <mat-error *ngIf="unitdetailsForm.get('service_aptype').hasError('required')">
                 You must make a selection
               </mat-error>
             </mat-form-field>
@@ -195,7 +195,7 @@
               <h4>Unit Problem: </h4> {{service_unitProb}}
             </div>
             <div class="column">
-              <h4>Type: </h4> {{service_type}}
+              <h4>Type: </h4> {{service_aptype}}
               <h4>Unit Type: </h4> {{service_unitType}}
             </div>
           </div>
@@ -271,7 +271,7 @@
                 <h4>Unit Problem: </h4> {{service_unitProb}}
               </div>
               <div class="column">
-                <h4>Type: </h4> {{service_type}}
+                <h4>Type: </h4> {{service_aptype}}
                 <h4>Unit Type: </h4> {{service_unitType}}
               </div>
               <hr>
@@ -394,7 +394,7 @@
                 <h4>Unit Problem: </h4> {{service_unitProb}}
               </div>
               <div class="column">
-                <h4>Type: </h4> {{service_type}}
+                <h4>Type: </h4> {{service_aptype}}
                 <h4>Unit Type: </h4> {{service_unitType}}
               </div>
               <hr>
@@ -430,7 +430,7 @@
                 <h4>Unit Problem: </h4> {{service_unitProb}}
               </div>
               <div class="column">
-                <h4>Type: </h4> {{service_type}}
+                <h4>Type: </h4> {{service_aptype}}
                 <h4>Unit Type: </h4> {{service_unitType}}
               </div>
               <hr>
