--- a/src/app/washingmachinedetails/washingmachinedetails.component.css
+++ b/src/app/washingmachinedetails/washingmachinedetails.component.css
@@ -48,7 +48,8 @@
   }
   .stepper
   {
-    margin-top: 50px;
+    margin: auto;
+    margin-top: 100px;
     font-family: 'Trebuchet MS';
     width: fit-content;
   }
