--- a/src/app/washingmachinedetails/washingmachinedetails.component.html
+++ b/src/app/washingmachinedetails/washingmachinedetails.component.html
@@ -54,12 +54,12 @@
 
               <mat-form-field class="washingmachineselect" appearance="outline">
                 <mat-label>Washing Machine Type</mat-label>
-                <mat-select formControlName="service_type">
+                <mat-select formControlName="service_aptype">
                   <mat-option *ngFor="let wmt of wm_type" [value]="wmt">
                     {{wmt}}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="unitdetailsForm.get('service_type').hasError('required')">
+                <mat-error *ngIf="unitdetailsForm.get('service_aptype').hasError('required')">
                   You must make a selection
                 </mat-error>
               </mat-form-field>
@@ -182,7 +182,7 @@
               <h4>Unit Problem: </h4> {{service_unitProb}}
             </div>
             <div class="column">
-              <h4>Type: </h4> {{service_type}}
+              <h4>Type: </h4> {{service_aptype}}
               <h4>Unit Type: </h4> {{service_unitType}}
             </div>
           </div>
@@ -261,7 +261,7 @@
                 <h4>Unit Problem: </h4> {{service_unitProb}}
               </div>
               <div class="column">
-                <h4>Type: </h4> {{service_type}}
+                <h4>Type: </h4> {{service_aptype}}
                 <h4>Unit Type: </h4> {{service_unitType}}
               </div>
               <hr>
@@ -385,7 +385,7 @@
                 <h4>Unit Problem: </h4> {{service_unitProb}}
               </div>
               <div class="column">
-                <h4>Type: </h4> {{service_type}}
+                <h4>Type: </h4> {{service_aptype}}
                 <h4>Unit Type: </h4> {{service_unitType}}
               </div>
               <hr>
@@ -421,7 +421,7 @@
                   <h4>Unit Problem: </h4> {{service_unitProb}}
                 </div>
                 <div class="column">
-                  <h4>Type: </h4> {{service_type}}
+                  <h4>Type: </h4> {{service_aptype}}
                   <h4>Unit Type: </h4> {{service_unitType}}
                 </div>
                 <hr>
