--- a/src/app/aircondetails/aircondetails.component.css
+++ b/src/app/aircondetails/aircondetails.component.css
@@ -151,7 +151,7 @@
     margin: auto;
     margin-top: 40px;
     width: 800px;
-    height: 350px;
+    height: fit-content;
   }
   .locationcard
   {
